--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
-<html>
-  <head>
-    <title>Essien's Excellence Academy</title>
-  </head>
-  <body>
-    <h1>Hello from Essien's Excellence Academy!</h1>
-    <p>Our website is under construction 🚧</p>
-  </body>
-</html>
+---
+layout: home
+title: "Essien's Excellence Academy"
+---
+
+# Welcome to Essien's Excellence Academy 🎓
+
+Excellence is our tradition.  
+
+At Essien’s Excellence Academy, we nurture young minds with Strong academics, Character development, Christlike Behaviour and Innovative learning.  
+
+👉 Explore our pages to learn more about **Admissions, Academics, Student Life, and Parent Resources**.
