--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@ layout: home
 title: "Essien's Excellence Academy"
 ---
 
-# Welcome to Essien's Excellence Academy 🎓
+ Welcome to Essien's Excellence Academy
+
 
 Excellence is our tradition.  
 
 At Essien’s Excellence Academy, we nurture young minds with Strong academics, Character development, Christlike Behaviour and Innovative learning.  
 
-👉 Explore our pages to learn more about **Admissions, Academics, Student Life, and Parent Resources**.
+Explore our pages to learn more about Admissions, Academics, Student Life, and Parent Resources.
