--- a/landing.html
+++ b/landing.html
@@ -81,7 +81,7 @@
   <!-- Hero Banner -->
   <section class="hero">
     <h1>Essien's Excellence Academy</h1>
-    <p>Shaping Minds, Building Futures</p>
+    <p>Rest not, aspire a greater height</p>
     <a href="admissions.md" class="btn">Apply Now</a>
   </section>
 
