--- a/academics.html
+++ b/academics.html
@@ -30,6 +30,11 @@
 
     <div class="academics-grid">
       <div class="card">
+        <h2>Kindergarten</h2>
+        <p>Nurturing curiosity and creativity in young learners through play-based learning.</p>
+      </div>
+
+      <div class="card">
         <h2>Primary Education</h2>
         <p>Building a solid foundation with focus on literacy, numeracy, and creativity.</p>
       </div>
@@ -37,11 +42,6 @@
       <div class="card">
         <h2>Junior High</h2>
         <p>Preparing students with critical thinking, technology skills, and leadership qualities.</p>
-      </div>
-
-      <div class="card">
-        <h2>Senior High</h2>
-        <p>Offering academic excellence and career pathways to higher education and beyond.</p>
       </div>
     </div>
   </main>
