--- a/admissions.html
+++ b/admissions.html
@@ -63,7 +63,7 @@
     </p>
 
     <!-- Apply Now Button -->
-    <button class="apply-button" onclick="toggleForm()">📄 Apply Now</button>
+    <button class="apply-button" onclick="toggleForm()"> Apply Now</button>
 
     <!-- Hidden Google Form -->
     <div id="formArea" class="form-container">
