--- a/admissions.html
+++ b/admissions.html
@@ -82,3 +82,19 @@
 
 </body>
 </html>
+<main class="page-section">
+  <h1>Admissions</h1>
+  <p>Join Essien's Excellence Academy today — fill out our online form below.</p>
+
+  <div class="liquid-glass">
+    <h2>Apply Now</h2>
+    <p>Click below to access our admission form.</p>
+    <a href="#admission-form" class="cta-button">Start Application</a>
+  </div>
+
+  <!-- Hidden form section -->
+  <div id="admission-form" class="liquid-glass" style="margin-top: 3rem;">
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScDcJaUkoO-8rMs1rwEsEBA3DuEpo9tgiD6Xmxihkp6ZQf6OA/viewform?embedded=true" 
+      width="100%" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+  </div>
+</main>
